changed the styling to sort of fit everything into 1 page to prevent scrolling on smaller screens height wise

--- a/style.css
+++ b/style.css
@@ -15,19 +15,14 @@ canvas {
 
 h1 {
     padding: 0;
+    margin-top: 10px;
     margin-bottom: 10px;
     font-size: 70px;
     text-align: center;
 }
 
-h3 {
-    margin: 0;
-    text-align: center;
-    font-size: 30px;
-}
-
 header {
-    padding: 3%;
+    padding: .5%;
     text-shadow: 3px 3px 5px black;
     margin-bottom: 2px;
 }
@@ -89,7 +84,6 @@ h2 {
 ol {
     font-size: 25px;
     margin-left: 20px;
-    /* text-align: center; */
 }
 
 li::before {
